@@ -50,7 +50,7 @@ import org.gjt.sp.util.Log;
  * jEdit's text component.
  *
  * @author Slava Pestov
- * @version $Id: JEditTextArea.java,v 1.92 2002/02/16 07:22:25 spestov Exp $
+ * @version $Id: JEditTextArea.java,v 1.93 2002/02/17 05:28:55 spestov Exp $
  */
 public class JEditTextArea extends JComponent
 {
@@ -2872,7 +2872,6 @@ loop:		for(int i = lineNo - 1; i >= 0; i--)
 
 		ChunkCache.LineInfo[] lineInfos = chunkCache.getLineInfosForPhysicalLine(line);
 		int subregion = getSubregionOfOffset(offset,lineInfos);
-		System.err.println(subregion);
 		if(subregion == 0)
 		{
 			firstIndent = MiscUtilities.getLeadingWhiteSpace(getLineText(line));
